--- a/src/style/index.less
+++ b/src/style/index.less
@@ -6,8 +6,22 @@ body {
 .login-container {
   .page-nav-bar {
     background-color: #3296fa;
-    .van-nav-bar__title {
+    .van-nav-bar__title,
+    .left-text {
       color: #fff;
     }
+    .left-text::before {
+      vertical-align: middle;
+    }
+
+    // .van-nav-bar__text,
+    // .van-icon {
+    //   color: #fff;
+    // }
+  }
+}
+.home-container {
+  .page-nav-bar {
+    background-color: #3296fa;
   }
 }
