--- a/src/style/index.less
+++ b/src/style/index.less
@@ -3,7 +3,8 @@ body {
   background-color: #f5f7f9;
 }
 
-.login-container {
+.login-container,
+.user-profile {
   .page-nav-bar {
     background-color: #3296fa;
     .van-nav-bar__title,
@@ -14,10 +15,9 @@ body {
       vertical-align: middle;
     }
 
-    // .van-nav-bar__text,
-    // .van-icon {
-    //   color: #fff;
-    // }
+    .van-icon {
+      color: #fff;
+    }
   }
 }
 .home-container {
